--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --config",
+    "start:local": "./node_modules/.bin/nodemon --config",
+    "start:server": "node ./build/index.js",
     "build": "./node_modules/.bin/tsc --build"
   },
   "keywords": [],
