--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.21",
+    "@types/socket.io": "^2.1.4",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
